--- a/style.css
+++ b/style.css
@@ -74,3 +74,13 @@ footer {
     margin: 0 1rem;
     border-radius: 50%;
 }
+
+@media (max-width: 768px) {
+    #gallery-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 480px) {
+    
+}
